Fixed overflow on the subinfo of a thumbnail card. Also made an empty modal non-white so it doesn't flash at the user while it is loading.

--- a/src/shared/ThumbnailCard.scss
+++ b/src/shared/ThumbnailCard.scss
@@ -28,6 +28,14 @@
   justify-content: space-between;
 }
 
+.sub {
+  max-width: 100%;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .dim {
   opacity: .3;
 }
